# tray

./: Cargo.toml  README.md
resources/: icon.icns
src/: main.rs
